@@ -1,3 +1,9 @@
+2006-08-07  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-utils.c: (show_bars):
+
+	Fixed hidden bug on allocated size
+
 2006-08-07  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-treeview.c: make sure a gmarkup message is 
